--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@types/pdfkit": "^0.11.2",
     "angular-plotly.js": "^4.0.4",
     "bootstrap": "^4.5.0",
     "data-forge": "^1.8.17",
     "data-forge-fs": "0.0.9",
+    "pdfkit": "^0.12.3",
     "plotly.js-dist-min": "^2.3.1",
     "rxjs": "~6.6.0",
+    "svg-to-pdfkit": "^0.1.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
